# breathesafe

./: .breathesafe-zshrc  .buildpacks  .gitignore  .overcommit.yml  .rubocop.yml  AGENTS.md  AWS_SETUP.md  DEPLOYMENT.md  Dockerfile  Gemfile  HEROKU_SETUP.md  INLINE_PREDICTOR_IMPLEMENTATION.md  LAMBDA_RECOMMENDATION.md  MASK_PREDICTOR_QUICKSTART.md  MASK_PREDICTOR_SETUP.md  Procfile  Procfile.dev  README.md  package.json  requirements.txt  vite.config.ts
config/: boot.rb  (+8 more)
python/: collect_data.py  collect_metadata.py  generate_place_grades_icons.py  pyproject.toml
python/air_cleaner_data/: 2023-02-11_18-38-00-SPS3x_C508CCF167AD3911.edf  2023-02-27_07-36-44-SPS3x_C508CCF167AD3911.edf  2023-02-27_07-40-51-SPS3x_C508CCF167AD3911.edf  2023-03-02_08-42-01-SPS3x_C508CCF167AD3911.edf  2023-03-07_17-31-50-SPS3x_C508CCF167AD3911.edf  2023-03-08_14-44-48-SPS3x_C508CCF167AD3911.edf  2023-03-08_15-08-14-SPS3x_C508CCF167AD3911.edf  2023-03-08_15-27-05-SPS3x_C508CCF167AD3911.edf  2023-03-08_15-47-51-SPS3x_C508CCF167AD3911.edf  2023-03-10_09-24-21-SPS3x_C508CCF167AD3911.edf  2023-07-05_02:02:47.819653.csv  2023-07-25_09:10:29.743125.csv  2023-07-25_11:16:20.358217.csv  2023-07-25_16:06:02.096202.csv  2023-07-26_08:52:19.021654.csv  2023-07-30_13:05:26.649130.csv  2023-08-19 15:30:21.451556.csv  2023-08-28 14:07:20.250857.csv  2023-08-29_09:06:29.406780.csv  2023-08-29_19:28:03.265445.csv  personal-air-cleaner-experiments - Sheet1.csv
python/co2-data/: Aranet4 0FCCA_2022-10-26T15_22_04-0400.csv  Aranet4 0FCCA_2022-11-07T07_50_28-0500.csv  Aranet4 0FCCA_2022-11-08T07_01_26-0500.csv  Edderic's house_Results.txt
python/mask-recommender/: armbrust_scraper.py  environment.yml  gen_qlft_solution_labels.py  qlft_solution_labels.html
(+738 files in other folders)
