[tool.poetry]
name = "breathesafe"
version = "0.1.0"
description = ""
authors = ["edderic@gmail.com"]

[tool.poetry.dependencies]
python = "3.9.2"
scipy = "^1.8.0"
sklearn = "*"
numpy = "*"
pandas = "*"
seaborn = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.9"
nbstripout = "^0.5.0"
pre-commit = "^2.17.0"
#graphviz = "^0.19.1"
#pygraphviz = "^1.9" # may need to `brew install graphviz` #jonathan is having issues with 'brew install graphviz' https://panoramaed.slack.com/archives/C02LYGQ1TS8/p1646408275747849?thread_ts=1646408175.680529&cid=C02LYGQ1TS8

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
